# megouniver

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
analysing/: analyser.py
config/: edu_mapper.py  settings.py
harvesting/: fetcher.py  harvester.py  interfaces.py  models.py  speciality.py  utils.py
harvesting/edu/: etu.py  guap.py  kpfu.py  spbstu.py  uust.py
scripts/: analyse.py  dbg_analyser.py  dbg_fetcher.py  dbg_guap.py  dbg_harvesting.py  dbg_kpfu.py  dbg_spbstu.py  dbg_uust.py  stat.py
